apps/base/campfire/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: campfire
  labels:
    homelab.io/app: "true"
