apps/base/campfire/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: campfire
spec:
  ports:
    - port: 80
  selector:
    app: campfire
  type: ClusterIP
